# openapi-cli

./: openapi-cli.py  pyproject.toml
project/: main.py  pyproject.toml
