[tool.poetry]
name = "openapi-cli"
version = "0.1.0"
description = ""
authors = ["Emil Madsen <sovende@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.22.0"
click = "^8.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
